--- a/DigitalElectronicsTech/TTL.json5
+++ b/DigitalElectronicsTech/TTL.json5
@@ -1,9 +1,7 @@
 {
     "TTL": {
         "AN": ["TTL电路","TTL反相器","TTL非门"],
-        "desc": 
-"
-晶体管-晶体管逻辑电路，英文全称:Transistor-Transistor-Logic
+        "desc": "晶体管-晶体管逻辑电路，英文全称:Transistor-Transistor-Logic
 TTL反相器常用参数：
     电源电位Vcc:5V
     高电平电位VH:3.4V
@@ -16,12 +14,11 @@ TTL反相器常用参数：
     输出高电平，则向外拉出不超过0.4mA电流
     输出低电平，则向内灌入不超过16mA电流
 "
+
     },
     "7400":{
         "AN":["TTL与非门"],
-        "desc":
-"
-14个接口，其中1个接Vcc一个接地。
+        "desc":"14个接口，其中1个接Vcc一个接地。
 其余每三个构成一个AB-Y型的与非门。
 "
     }
