--- a/DigitalElectronicsTech/TTL.json5
+++ b/DigitalElectronicsTech/TTL.json5
@@ -20,7 +20,7 @@ TTL反相器常用参数： \n\
         "AN":["TTL与非门"],
         "desc":
 "\
-14个接口，其中1个接Vcc一个接地。\n\
+14个接口，其中1个接Vcc1个接地。\n\
 其余每三个构成一个AB-Y型的与非门。\n\
 "
     }
