--- a/DigitalElectronicsTech/数据选择器.json5
+++ b/DigitalElectronicsTech/数据选择器.json5
@@ -1,18 +1,21 @@
 {
     "74LS153": {
-        "AN": ["四选一","四选一数据选择器"],
+        "AN": ["四选一","四选一数据选择器","双四选一数据选择器"],
         "desc": "\
-CMOS反相器由N沟道MOSFET和P沟道MOSFET互补而成\n\
-在高频切换高低电平的电路中可能会有不小的动态功耗\n\
-常用参数：\n\
-    电源电位Vdd:CC4000系列可在3~18V内选取\n\
-    高电平电位VH:Vdd\n\
-    低电平电位VL:0V\n\
-    阈值电位:50%Vdd\n\
-    高电平噪声容限VNH = 低电平噪声容限VNL = 30%Vdd\n\
-    平均传输延时:10ns\n\
+双四选一数据选择器74LS153\n\
+管脚列表：\n\
+    1:1G',控制1Y的使能，为高电平时1Y始终为低电平，正常工作时应把1G'置于低电平\n\
+    2:B,和A一起组成二位二进制地址输入(表示范围0~3),注意B是高位(权:2)\n\
+    3~6:1C3~1C0,1号数据输入\n\
+    7:1Y,1号输出,1Y = !1G' & (1C[BA])\n\
+    8:GND,接地没什么好说的\n\
+    9:2Y,参见7号的1Y，只是把编号改成2\n\
+    10~13:2C0~2C3,2号数据输入\n\
+    14:A,和B一起组成二位二进制地址输入(表示范围0~3),注意A是低位(权:1)\n\
+    15:2G',参见1号\n\
+    16:Vcc,接电源没什么好说的\n\
 "
     },
-
+    "img":["74LS153.png"]
 
 }
