--- a/DigitalElectronicsTech/数据选择器.json5
+++ b/DigitalElectronicsTech/数据选择器.json5
@@ -1,8 +1,9 @@
 {
     "74LS153": {
-        "AN": ["四选一","四选一数据选择器","双四选一数据选择器"],
+        "AN": ["4选1","四选一","四选一数据选择器","双四选一数据选择器"],
         "desc": "\
 双四选一数据选择器74LS153\n\
+根据提供的地址输出相应数据位上的数据\n\
 管脚列表：\n\
     1:1G',控制1Y的使能，为高电平时1Y始终为低电平，正常工作时应把1G'置于低电平\n\
     2:B,和A一起组成二位二进制地址输入(表示范围0~3),注意B是高位(权:2)\n\
@@ -17,6 +18,21 @@
 ",
         "img":["74LS153.png"]
     },
-    
+    "74LS151": {
+        "AN": ["八选一","八选一数据选择器","8选1"],
+        "desc": "\
+八选一数据选择器74LS151\n\
+根据提供的地址输出相应数据位上的数据\n\
+管脚列表：\n\
+    1~4,12~15:数据输入\n\
+    5:Y,同相输出端\n\
+    6:W,反相输出端\n\
+    7:G',使能端，为1时Y恒为0，为0时正常工作\n\
+    8:GND接地\n\
+    9~11:地址输入，CBA权分别为4,2,1，表示范围0~7\n\
+    16:Vcc接电源\n\
+",
+        "img":["74LS151.png"]
+    },
 
 }
