--- a/DigitalElectronicsTech/数据选择器.json5
+++ b/DigitalElectronicsTech/数据选择器.json5
@@ -25,7 +25,7 @@
 根据提供的地址输出相应数据位上的数据\n\
 管脚列表：\n\
     1~4,12~15:数据输入\n\
-    5:Y,同相输出端\n\
+    5:Y,同相输出端,Y = !G' & D[CBA]\n\
     6:W,反相输出端\n\
     7:G',使能端，为1时Y恒为0，为0时正常工作\n\
     8:GND接地\n\
