--- a/DigitalElectronicsTech/编码器.json5
+++ b/DigitalElectronicsTech/编码器.json5
@@ -20,6 +20,22 @@
 ",
         "img":["74LS148.png"]
     },
-
+    "74LS147": {
+        "AN": ["二-十进制编码器","2编10"],
+        "desc": "\
+二-十进制编码器74LS147\n\
+把输入的数码编为8421BCD码，具有优先性\n\
+输入:1',2',3',4',5',6',7',8',9'注意没有0',在1~9全高时才表示0\n\
+输出:D',C',B',A'\n\
+没错，全都是反着来的\n\
+管脚列表：\n\
+    1~5,10~13:待编码的数码输入(1~9)，值越大越优先\n\
+    6,7,9:输出，输出为对应BCD数值的反码(拿15去减)\n\
+    8:GND接地\n\
+    15:空管脚，真的没什么用\n\
+    16:Vcc接电源\n\
+",
+        "img":["74LS147.png"]
+    },
 
 }
