--- a/DigitalElectronicsTech/译码器.json5
+++ b/DigitalElectronicsTech/译码器.json5
@@ -30,5 +30,23 @@
 ",
         "img":["74LS42.png"]
     },
+    "74LS48": {
+        "AN": ["显示译码器","7段显示译码器"],
+        "desc": "\
+BCD-七段显示译码器74LS48\n\
+把输入的BCD数码译为可以点亮七段液晶屏的电平格式以让人可读\n\
+输入:A,B,C,D(D权最高),LT',RBI',BI'\n\
+输出:a,b,c,d,e,f,g,RBO'\n\
+管脚列表：\n\
+    1~2,6~7:输入\n\
+    3:LT',测灯端，为0时显示器全亮\n\
+    4:BI'/RBO',兼具输入输出功能。灭灯输入端BI'为0时显示器全灭（优先于LT'）；仅灭0输入端RBI'=0且DCBA=0000时灭0输出端RBO'输出0\n\
+    5:RBI',灭0输入端,DCBA=0000时显示器全灭，不显示0\n\
+    8:GND接地\n\
+    9~15:7段输出\n\
+    16:Vcc接电源\n\
+",
+        "img":["74LS48.png"]
+    },
 
 }
