--- a/DigitalElectronicsTech/数据选择器.json5
+++ b/DigitalElectronicsTech/数据选择器.json5
@@ -1,6 +1,6 @@
 {
     "74LS153": {
-        "AN": ["4选1","四选一","四选一数据选择器","双四选一数据选择器"],
+        "AN": ["74153","4选1","四选一","四选一数据选择器","双四选一数据选择器"],
         "desc": "\
 双四选一数据选择器74LS153\n\
 根据提供的地址输出相应数据位上的数据\n\
@@ -19,7 +19,7 @@
         "img":["74LS153.png"]
     },
     "74LS151": {
-        "AN": ["八选一","八选一数据选择器","8选1"],
+        "AN": ["74151","八选一","八选一数据选择器","8选1"],
         "desc": "\
 八选一数据选择器74LS151\n\
 根据提供的地址输出相应数据位上的数据\n\
