--- a/DigitalElectronicsTech/编码器.json5
+++ b/DigitalElectronicsTech/编码器.json5
@@ -1,6 +1,6 @@
 {
     "74LS148": {
-        "AN": ["8编3","8线3线编码器","83优先编码器","8线-3线优先编码器"],
+        "AN": ["74148","8编3","8线3线编码器","83优先编码器","8线-3线优先编码器"],
         "desc": "\
 8线-3线优先编码器74LS148\n\
 把输入的单位数码编为二进制数输出，具有优先性\n\
@@ -21,7 +21,7 @@
         "img":["74LS148.png"]
     },
     "74LS147": {
-        "AN": ["二-十进制编码器","2编10"],
+        "AN": ["74147","二-十进制编码器","2编10"],
         "desc": "\
 二-十进制编码器74LS147\n\
 把输入的数码编为8421BCD码，具有优先性\n\
