--- a/DigitalElectronicsTech/译码器.json5
+++ b/DigitalElectronicsTech/译码器.json5
@@ -1,6 +1,6 @@
 {
     "74LS138": {
-        "AN": ["3译8","3线-8线译码器","38译码器","74ls138"],
+        "AN": ["74138","3译8","3线-8线译码器","38译码器"],
         "desc": "\
 3线-8线译码器74LS138\n\
 将输入的二进制数解译为单端输出\n\
@@ -16,7 +16,7 @@
         "img":["74LS138.png"]
     },
     "74LS42": {
-        "AN": ["二-十进制译码器","2译10","74ls42"],
+        "AN": ["7442","二-十进制译码器","2译10"],
         "desc": "\
 二-十进制译码器74LS42\n\
 把输入的BCD数码译为单端输出\n\
@@ -31,7 +31,7 @@
         "img":["74LS42.png"]
     },
     "74LS48": {
-        "AN": ["显示译码器","7段显示译码器"],
+        "AN": ["7448","显示译码器","7段显示译码器"],
         "desc": "\
 BCD-七段显示译码器74LS48\n\
 把输入的BCD数码译为可以点亮七段液晶屏的电平格式以让人可读\n\
