--- a/DigitalElectronicsTech/CMOS.json5
+++ b/DigitalElectronicsTech/CMOS.json5
@@ -4,6 +4,7 @@
         "desc": "\
 CMOS反相器由N沟道MOSFET和P沟道MOSFET互补而成\n\
 在高频切换高低电平的电路中可能会有不小的动态功耗\n\
+注意CMOS系电路引脚是不允许悬空的,引脚无论如何接地都视为接0\n\
 常用参数：\n\
     电源电位Vdd:CC4000系列可在3~18V内选取\n\
     高电平电位VH:Vdd\n\
