--- a/DigitalElectronicsTech/寄存器.json5
+++ b/DigitalElectronicsTech/寄存器.json5
@@ -7,7 +7,7 @@
 输入:D0,D1,D2,D3,MR',CP\n\
 输出:Q0,Q1,Q2,Q3,Q0',Q1',Q2',Q3'\n\
 管脚列表：\n\
-    1,MR',MasterReset,异步清零，为0时无视CP直接清零\n\
+    1:MR',MasterReset,异步清零，为0时无视CP直接清零\n\
     15,10,7,2:Q同相输出\n\
     14,11,6,3:Q'反相输出\n\
     13,12,5,4:D输入\n\
@@ -26,7 +26,7 @@ S1和S0控制移位行为，在CP上升沿触发\n\
 输入:D0,D1,D2,D3,DR,DL,MR',CP,S1,S0\n\
 输出:Q0,Q1,Q2,Q3\n\
 管脚列表：\n\
-    1,MR',MasterReset,异步清零，为0时无视CP直接清零\n\
+    1:MR',MasterReset,异步清零，为0时无视CP直接清零\n\
     2:DR,右移补位,右移后Q0=DR\n\
     6~3:D数据输入\n\
     9:S0,S1S0=01时右移,10时左移,11时送数,00时保持\n\
