可编程逻辑器件

--- a/DigitalElectronicsTech/半导体存储器.json5
+++ b/DigitalElectronicsTech/半导体存储器.json5
@@ -30,6 +30,10 @@ Programmable read-only memory\n\
     地址译码器\n\
     存储矩阵\n\
     输出缓冲器\n\
+下流分支的PROM可以视为由固定的与阵列和可编程的或阵列构成的逻辑阵列\n\
+所以被称为第一代PLD\n\
+但与阵列为全译码制，阵列较大，开关时间较长\n\
+\n\
 输入线(地址译码器前)称为地址线A\n\
 地址译码器与存储矩阵间接线称为字线W\n\
 输出线(输出缓冲器之后)称为位线D\n\
