--- a/DigitalElectronicsTech/可编程逻辑器件.json5
+++ b/DigitalElectronicsTech/可编程逻辑器件.json5
@@ -59,22 +59,22 @@ Programmable Array Logic\n\
         "desc": "\
 Generic Array Logic\n\
 采用E^2CMOS工艺制造，可反复多次编程\n\
-特性：
-    采用可编程输出逻辑宏单元OLMC(Output Logic Macro Cell)
-    具有加密功能
+特性：\n\
+    采用可编程输出逻辑宏单元OLMC(Output Logic Macro Cell)\n\
+    具有加密功能\n\
 组成：\n\
-    输入缓冲器
+    输入缓冲器\n\
     可编程与阵列\n\
     固定或阵列\n\
     OLMC\n\
-行地址映射：
-    0~31：与逻辑阵列
-    32：电子标签
-    33~59：保留地址空间
-    60：结构控制字
-    61：加密单元
-    62：保留
-    63：整体擦除
+行地址映射：\n\
+    0~31：与逻辑阵列\n\
+    32：电子标签\n\
+    33~59：保留地址空间\n\
+    60：结构控制字\n\
+    61：加密单元\n\
+    62：保留\n\
+    63：整体擦除\n\
 "
     },
 
