--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 2048/
 vote/
 CF/
+AtCoder/
 ddl/
 Polyline/
 SlidingPuzzle/
 BinarySearchGame/
+NowCoder/
+NimGame/
 __pycache__/
 weather/
 sniffer/
