--- a/Dockerfile-CN
+++ b/Dockerfile-CN
@@ -2,16 +2,17 @@
 FROM alpine:latest
 
 #代码添加到code文件夹，后面可以通过进入容器中看的
-COPY ./ /irori
+# COPY ./ /irori
 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories && \
 apk update && apk add python3 && apk add py3-pip && \
 apk add make automake gcc g++ subversion python3-dev && \
 apk add curl bash openjdk8-jre-base && \
-apk add jpeg-dev zlib-dev unzip screen nano && \
+apk add jpeg-dev zlib-dev unzip screen nano git && \
 rm -rf /var/cache/apk/* && \
 pip3 install -U pip -i https://pypi.tuna.tsinghua.edu.cn/simple/ && \
 pip3 install wheel -i https://pypi.tuna.tsinghua.edu.cn/simple/ && \
+git clone https://github.com/voidf/bot_irori.git /irori && \
 wget http://d0.ananas.chaoxing.com/download/aad7ee20c57d3b402b7f254b4f3373de -U "Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36" -O env.zip && \
 pip3 install -r /irori/requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple/ && \
 unzip env.zip && chmod +x /env/run.sh && cd /env
