--- a/cfg.json.template
+++ b/cfg.json.template
@@ -21,6 +21,8 @@
     "appid": "2020123456789", # 设置百度翻译的appid
     "secretKey": "ajusdhgiudhfgiohsdkil", # 百度翻译的密钥
     "echoMsg": false, # 是否打印收到的消息链
+    "dbcfg":{"host":"mongodb://localhost:27017/irori_data"}, # mongoDB的连接配置
+    "loggercfg":{"file":"", "level":"debug"}, # 留空为不存文件
     "lengthLim":1919, # 文字转图片的字符串长度阈值
     "AVGHost": "http://127.0.0.1:1919", # AVG主机地址（没有或不需要可留空
     "OJHost": "http://127.0.0.1:14569" # OJ主机地址（没有或不需要可留空
